namespace-networking/neamespace-networkpolicy.yaml
#by default all pods communication is allowed in namespace we are denying that
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: pavan
spec:
  podSelector: {}          # ALL pods in namespace
  policyTypes:
  - Ingress
---
# we are allowing only internal pod communication in the namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal
  namespace: pavan
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
---
# we are denying all outgoing trafic pod communication in the namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: pavan
spec:
  podSelector: {}
  policyTypes:
  - Egress
---
#we are allowing trafic pod communication to kubesystem namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: pavan
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

---
#we are allowing trafic to all pod communication within same namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-traffic
  namespace: pavan
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: pavan
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: pavan

---
#we are allowing trafic to all pod communication coming from internet
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-ingress
  namespace: pavan
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
---
